--- a/Zbang.Cloudents.MobileApp/Web.config
+++ b/Zbang.Cloudents.MobileApp/Web.config
@@ -10,7 +10,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <!--<add name="ZBox" connectionString="Data Source=(local);Initial Catalog=Zbox;Integrated Security=SSPI;Asynchronous Processing=True;" providerName="System.Data.SqlClient" />-->
+    <!--<add name="ZBox" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Zbox;Integrated Security=SSPI;Asynchronous Processing=True;" providerName="System.Data.SqlClient" />-->
     <add name="ZBox" connectionString="Server=tcp:on0rodxe8f.database.windows.net;Database=ZBoxNew;User ID=ZBoxAdmin@on0rodxe8f;Password=Pa$$W0rd;Trusted_Connection=False;Encrypt=True;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
     <!--<add name="MS_TableConnectionString" connectionString="Data Source=(localdb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Zbang.Cloudents.MobileApp-20160229024016.mdf;Initial Catalog=aspnet-Zbang.Cloudents.MobileApp-20160229024016;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
