--- a/Testing/app.config
+++ b/Testing/app.config
@@ -24,7 +24,7 @@
     </logger>
   </log4net>
   <connectionStrings>
-    <!--<add name="ZBox" connectionString="Data Source=(local);Initial Catalog=ZBox;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />-->
+    <!--<add name="ZBox" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ZBox;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />-->
     <add name="ZBox" connectionString="Server=tcp:on0rodxe8f.database.windows.net;Database=ZBoxNew;User ID=ZBoxAdmin@on0rodxe8f;Password=Pa$$W0rd;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
