--- a/Zbang.Zbox.ReadServicesTests/app.config
+++ b/Zbang.Zbox.ReadServicesTests/app.config
@@ -45,6 +45,6 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="ZBox" connectionString="Data Source=(local);Initial Catalog=ZBox;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="ZBox" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ZBox;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" /></startup></configuration>
