--- a/Zbang.Cloudents.MobileApp/Web.config
+++ b/Zbang.Cloudents.MobileApp/Web.config
@@ -27,6 +27,7 @@
     <add key="ValidAudience" value="https://www.spitball.co" />
     <add key="ValidIssuer" value="https://www.spitball.co" />
     <add key="DataCache" value="AzureMVC1" />
+    <add key="SearchProduction" value="true" />
     <add key="platform" value="mobile" />
   <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedSecretIssuer=owner;SharedSecretValue=[your secret]" /></appSettings>
   <!--
