--- a/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
+++ b/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
@@ -1385,6 +1385,7 @@
     <Content Include="Js\components\quiz\quizCreate.config.js" />
     <Content Include="Js\components\user\user.service.js" />
     <Content Include="Js\initAngular.js" />
+    <Content Include="Js\shared\cartAnimation.directive.js" />
     <Content Include="Js\shared\collapseHeader.directive.js" />
     <Content Include="Js\shared\inlineManualNew.js" />
     <Content Include="Js\shared\sounds.js" />
