--- a/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
+++ b/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
@@ -1410,7 +1410,8 @@
     <TypeScriptCompile Include="Js\components\dashboard\dashboard.routes.ts" />
     <TypeScriptCompile Include="Js\components\dashboard\dashboard.service.ts" />
     <TypeScriptCompile Include="Js\components\item\dropFileClass.directive.ts" />
-    <TypeScriptCompile Include="Js\components\library\classChooseDialog.controller.ts" />
+    <TypeScriptCompile Include="Js\components\library\classChooseCreateDialog.controller.ts" />
+    <TypeScriptCompile Include="Js\components\library\classChooseUnfollowDialog.controller.ts" />
     <TypeScriptCompile Include="Js\components\library\classChoose.controller.ts" />
     <TypeScriptCompile Include="Js\components\library\library.service.ts" />
     <TypeScriptCompile Include="Js\components\quiz\quiz.service.ts" />
