--- a/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
+++ b/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
@@ -1264,6 +1264,7 @@
     <Content Include="Images\HomePage2\HP_image.jpg" />
     <Content Include="Images\HomePage2\infographics_en.png" />
     <Content Include="Images\HomePage2\infographics_he.png" />
+    <Content Include="Images\Site\add_class.png" />
     <Content Include="Images\Site\community-bg.png" />
     <Content Include="Images\Site\course_choose_popup.png" />
     <Content Include="Images\Site\create_uni_text_blue.png" />
