--- a/Zbang.Cloudents.Mvc4WebRole/compilerconfig.json
+++ b/Zbang.Cloudents.Mvc4WebRole/compilerconfig.json
@@ -195,5 +195,9 @@
   {
     "outputFile": "Content/Site/selectClass.css",
     "inputFile": "Content/Site/selectClass.less"
+  },
+  {
+    "outputFile": "Content/Site/flashcard.css",
+    "inputFile": "Content/Site/flashcard.less"
   }
 ]
