--- a/Zbang.Zbox.Domain.CommandHandlers/Zbang.Zbox.Domain.CommandHandlers.csproj
+++ b/Zbang.Zbox.Domain.CommandHandlers/Zbang.Zbox.Domain.CommandHandlers.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddFlashcardCommandHandler.cs" />
     <Compile Include="AddItemCommentCommandHandler.cs" />
     <Compile Include="AddReplyToCommentCommandHandler.cs" />
     <Compile Include="AddFileToBoxCommandHandler.cs" />
@@ -199,6 +200,9 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>CommandHandlerResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
