--- a/Zbang.Zbox.Domain.Commands/Zbang.Zbox.Domain.Commands.csproj
+++ b/Zbang.Zbox.Domain.Commands/Zbang.Zbox.Domain.Commands.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddFlashcardCommand.cs" />
     <Compile Include="AddItemCommentCommand.cs" />
     <Compile Include="AddReplyToCommentCommand.cs" />
     <Compile Include="AddCommentCommandResult.cs" />
