--- a/Zbang.Zbox.Infrastructure.Data/packages.config
+++ b/Zbang.Zbox.Infrastructure.Data/packages.config
@@ -4,5 +4,7 @@
   <package id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0" targetFramework="net451" />
   <package id="EnterpriseLibrary.TransientFaultHandling.Data" version="6.0.1304.1" targetFramework="net451" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
+  <package id="Microsoft.Azure.DocumentDB" version="1.10.0" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net451" />
 </packages>
