added image icon

--- a/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
+++ b/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
@@ -987,6 +987,7 @@
     <Content Include="Content\Site\flashcard.min.css">
       <DependentUpon>flashcard.css</DependentUpon>
     </Content>
+    <Content Include="Content\Site\flashcard.rtl.css" />
     <Content Include="Content\Site\General.css">
       <DependentUpon>General.less</DependentUpon>
     </Content>
