--- a/Zbang.Cloudents.Mvc4WebRole/packages.config
+++ b/Zbang.Cloudents.Mvc4WebRole/packages.config
@@ -52,6 +52,7 @@
   <package id="MvcDonutCaching" version="1.3.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
+  <package id="plupload.TypeScript.DefinitelyTyped" version="0.0.1" targetFramework="net451" />
   <package id="Sigil" version="4.7.0" targetFramework="net451" />
   <package id="signalr.TypeScript.DefinitelyTyped" version="0.4.1" targetFramework="net451" />
   <package id="SquishIt" version="0.9.8.2" targetFramework="net451" />
