flashcard update is done.

--- a/Zbang.Cloudents.Mvc4WebRole/Web.config
+++ b/Zbang.Cloudents.Mvc4WebRole/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -100,7 +100,9 @@
   </location>
   <system.webServer>
     <handlers>
+            <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <add name="ManagedFileWithExtension" path="sitemap*.xml" verb="GET" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+            <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE" type="System.Web.Handlers.TransferRequestHandler" resourceType="Unspecified" requireAccess="Script" preCondition="integratedMode,runtimeVersionv4.0" responseBufferLimit="0" />
     </handlers>
     <httpErrors existingResponse="Replace" errorMode="Custom">
       <remove statusCode="404" />
