--- a/Zbang.Zbox.Domain.Commands/Zbang.Zbox.Domain.Commands.csproj
+++ b/Zbang.Zbox.Domain.Commands/Zbang.Zbox.Domain.Commands.csproj
@@ -121,6 +121,7 @@
     <Compile Include="RemoveOldConnectionCommand.cs" />
     <Compile Include="RequestAccessLibraryNodeCommand.cs" />
     <Compile Include="UnsubscribeUsersFromEmailCommand.cs" />
+    <Compile Include="UpdateFlashcardCommand.cs" />
     <Compile Include="UpdateNodeSettingsCommand.cs" />
     <Compile Include="AddReputationCommand.cs" />
     <Compile Include="UnFollowBoxCommand.cs" />
