--- a/Zbang.Zbox.ViewModel/Zbang.Zbox.ViewModel.csproj
+++ b/Zbang.Zbox.ViewModel/Zbang.Zbox.ViewModel.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Dto\Emails\UserDigestDto.cs" />
     <Compile Include="Dto\ItemDtos\DiscussionDto.cs" />
     <Compile Include="Dto\ItemDtos\FileWithDetailDto.cs" />
+    <Compile Include="Dto\ItemDtos\FlashcardDto.cs" />
     <Compile Include="Dto\ItemDtos\IItemDto.cs" />
     <Compile Include="Dto\ItemDtos\ItemDetailDto.cs" />
     <Compile Include="Dto\ItemDtos\ItemDto.cs" />
