--- a/Zbang.Zbox.Infrastructure.DataTests/Zbang.Zbox.Infrastructure.DataTests.csproj
+++ b/Zbang.Zbox.Infrastructure.DataTests/Zbang.Zbox.Infrastructure.DataTests.csproj
@@ -46,8 +46,9 @@
       <HintPath>..\packages\NHibernate.4.0.4.4000\lib\net40\NHibernate.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Rhino.Mocks">
-      <HintPath>..\Bin\Rhino.Mocks-3.6\Rhino.Mocks.dll</HintPath>
+    <Reference Include="Rhino.Mocks, Version=3.6.0.0, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
+      <HintPath>..\packages\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
