--- a/Zbang.Zbox.Infrastructure.DataTests/packages.config
+++ b/Zbang.Zbox.Infrastructure.DataTests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net451" />
+  <package id="RhinoMocks" version="3.6.1" targetFramework="net451" />
 </packages>
