--- a/Zbang.Zbox.Domain.CommandHandlers/Zbang.Zbox.Domain.CommandHandlers.csproj
+++ b/Zbang.Zbox.Domain.CommandHandlers/Zbang.Zbox.Domain.CommandHandlers.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddFlashcardCommandHandler.cs" />
+    <Compile Include="AddFlashcardPinCommandHandler.cs" />
     <Compile Include="AddItemCommentCommandHandler.cs" />
     <Compile Include="AddReplyToCommentCommandHandler.cs" />
     <Compile Include="AddFileToBoxCommandHandler.cs" />
