--- a/Zbang.Zbox.Domain.Commands/Zbang.Zbox.Domain.Commands.csproj
+++ b/Zbang.Zbox.Domain.Commands/Zbang.Zbox.Domain.Commands.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddFlashcardCommand.cs" />
+    <Compile Include="AddFlashcardPinCommand.cs" />
     <Compile Include="AddItemCommentCommand.cs" />
     <Compile Include="AddReplyToCommentCommand.cs" />
     <Compile Include="AddCommentCommandResult.cs" />
