--- a/Zbang.Zbox.Domain.CommandHandlers/Zbang.Zbox.Domain.CommandHandlers.csproj
+++ b/Zbang.Zbox.Domain.CommandHandlers/Zbang.Zbox.Domain.CommandHandlers.csproj
@@ -84,6 +84,7 @@
     <Compile Include="CreateUniversityCommandHandler.cs" />
     <Compile Include="DeleteBoxCommandHandler.cs" />
     <Compile Include="DeleteFlashcardCommandHandler.cs" />
+    <Compile Include="DeleteFlashcardPinCommandHandler.cs" />
     <Compile Include="DeleteItemCommentCommandHandler.cs" />
     <Compile Include="DeleteItemCommentReplyCommandHandler.cs" />
     <Compile Include="DeleteItemTabCommandHandler.cs" />
