--- a/Zbang.Cloudents.Mvc4WebRole/bower.json
+++ b/Zbang.Cloudents.Mvc4WebRole/bower.json
@@ -9,8 +9,7 @@
     "ng-scrollbars": "0.0.10",
     "oclazyload": "1.0.9",
     "angular-plupload": "0.1.6",
-    "angular-vs-repeat": "1.1.7",
-    "ngFitText": "4.2.1"
+    "angular-vs-repeat": "1.1.7"
   },
   "resolutions": {
     "angular": "^1.2.0",
