--- a/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
+++ b/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
@@ -2716,6 +2716,7 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>ValidatePasswordResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\Flashcard\Resources\FlashcardResources.he.resx" />
     <EmbeddedResource Include="Views\Flashcard\Resources\FlashcardResources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>FlashcardResources.Designer.cs</LastGenOutput>
